--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Frontend
+name: Deploy Bachacode
 
 on:
   push:
@@ -14,11 +14,25 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Deploy to DigitalOcean droplet via SSH
-      uses: appleboy/ssh-action@v0.1.3
+      uses: appleboy/ssh-action@v0.1.7
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-          cd htdocs
-          touch test.txt
+          # Change directory to repository
+          cd ~/htdocs/bachacode.com
+          # Fetch and pull changes
+          git fetch && git pull
+          # Install new dependencies if needed and rebuild app
+          npm install && next build
+          # Check if PM2 process is running
+          if pm2 list | grep -q 'next-bachacode'; then
+            # Reload application to ensure zero downtime
+            pm2 reload next-bachacode
+          else
+            # Start the application with PM2 if not already running
+            pm2 start npm --name "next-bachacode" -- start
+          fi
+
+          pm2 list
