--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.2.6",
     "nodemailer": "^6.9.15",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.53.0",
