--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.6",
+    "next-nprogress-bar": "^2.3.14",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-countup": "^6.5.3",
