--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "embla-carousel-auto-scroll": "^8.3.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.3",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
     "next-nprogress-bar": "^2.3.14",
@@ -33,6 +36,7 @@
     "react-dom": "^18",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.4.1",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
