--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "embla-carousel-auto-scroll": "^8.3.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
     "next-intl": "^3.26.4",
@@ -41,6 +42,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
