--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.12",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.0.0",
     "@types/nodemailer": "^6.4.15",
@@ -51,8 +52,8 @@
     "eslint-config-next": "15.2.1",
     "postcss": "^8",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
-    "tailwindcss": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.12",
     "typescript": "^5"
   }
 }
