--- a/renovate.json
+++ b/renovate.json
@@ -1,16 +1,11 @@
 {
-  "extends": [
-    "config:base"
-  ],
+  "extends": ["config:base"],
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
       "automerge": true
     },
-    {
-      "matchDepTypes": ["devDependencies"],
-      "automerge": true
-    }
+    { "matchDepTypes": ["devDependencies"], "automerge": true }
   ],
   "platformAutomerge": true
 }
