--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "15.2.1",
     "next-intl": "^3.26.4",
     "next-nprogress-bar": "^2.3.14",
+    "next-turnstile": "^1.0.5",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-countup": "^6.5.3",
@@ -39,6 +40,7 @@
     "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
