--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_FRONTEND_URL=
 NEXT_PUBLIC_SUPPORT_EMAIL=
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
 SEND_GRID_API_KEY=
-RECAPTCHA_SECRET_KEY=
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=
+TURNSTILE_SECRET_KEY=
