--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@types/react-dom": "^18",
     "eslint": "^9.0.0",
     "eslint-config-next": "15.2.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
