--- a/.github/workflows/check-linting.yml
+++ b/.github/workflows/check-linting.yml
@@ -1,4 +1,4 @@
-name: Lint & Prettier Check
+name: ESlint Check
 
 on:
   push:
@@ -25,6 +25,3 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
-
-      - name: Run Prettier check
-        run: npm run prettier:check
