--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,15 +1,17 @@
-# .github/workflow/lint-autofix.yml
-name: Lint & Prettier Auto-Fix
+name: Prettier
 
 on:
   push:
     branches: [main]
 
+permissions:
+  contents: write
+
 jobs:
   lint-autofix:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    strategy:
+      fail-fast: true
 
     steps:
       - name: Checkout code
@@ -26,9 +28,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
-      - name: Run ESLint (auto-fix)
-        run: npm run lint:fix
 
       - name: Run Prettier (auto-fix)
         run: npm run prettier:fix
