--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_FRONTEND_URL=
 NEXT_PUBLIC_SUPPORT_EMAIL=
-SEND_GRID_API_KEY=
+SMTP_API_KEY=
+SMTP_USERNAME=
+SMTP_PASSWORD=
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=
 TURNSTILE_SECRET_KEY=
