--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "prettier:check": "prettier --check .",
-    "prettier:fix": "prettier --write ."
+    "prettier:fix": "prettier --write .",
+    "i18n:check": "i18n-check -s en --locales lang/"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
