feat: added new i18n check github action workflow and updated prettier workflow job name

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -10,7 +10,7 @@ permissions:
   contents: write
 
 jobs:
-  lint-autofix:
+  prettier-autofix:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
