--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@vercel/analytics": "^1.4.1",
     "axios": "^1.11.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-auto-scroll": "^8.3.0",
     "embla-carousel-autoplay": "^8.3.0",
@@ -43,7 +43,7 @@
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.62.0",
     "sharp": "^0.33.5",
-    "tailwind-merge": "^3.0.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
@@ -64,6 +64,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.12",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
